--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "@rocketseat/eslint-config": "^2.1.0",
     "@types/node": "^20.11.16",
     "eslint": "^8.56.0",
+    "prisma": "^5.9.1",
     "tsx": "^4.7.0",
     "typescript": "^5.3.3"
   },
   "dependencies": {
-    "fastify": "^4.26.0"
+    "@prisma/client": "^5.9.1",
+    "fastify": "^4.26.0",
+    "zod": "^3.22.4"
   }
 }
